# aws-snowflake-ml-lifecycle-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: churn_ml_lifecycle_dag.py
config/: config.yaml
dashboards/: app.py  metrics_contract.json
data/sample/: customers.csv  product_events.csv  subscriptions.csv
data_ingestion/: __init__.py  connectors.py  ingestion_job.py  schema.py  snowflake_loader.py
deployment/: __init__.py  api.py  inference.py  sagemaker_deploy.py
docs/: architecture.md  monitoring.md  runbook.md  snowflake_bootstrap.sql
docs/diagrams/: architecture.mmd  data_flow.mmd  ml_lifecycle.mmd
feature_engineering/: __init__.py  data_quality.py  etl_pyspark.py  feature_store.py  transformations.py
monitoring/: __init__.py  drift.py  metrics.py  monitor.py  retraining.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_data_quality.py  test_feature_store_sql.py  test_monitoring.py  test_transformations.py
training/: __init__.py  compare.py  evaluate.py  hpo.py  model_registry.py  models.py  train.py
