[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-snowflake-ml-lifecycle-platform"
version = "0.1.0"
description = "Production-grade customer churn ML lifecycle platform on AWS, Snowflake, SageMaker, MLflow, and Airflow."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "joblib>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
cloud = [
  "boto3>=1.34",
  "sagemaker>=2.230",
  "snowflake-connector-python>=3.12"
]
spark = [
  "pyspark>=3.5"
]
ml = [
  "mlflow>=2.15",
  "xgboost>=2.1",
  "tensorflow>=2.17",
  "torch>=2.4"
]
orchestration = [
  "apache-airflow>=2.10"
]
dashboard = [
  "plotly>=5.23",
  "streamlit>=1.37"
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
include = ["data_ingestion*", "feature_engineering*", "training*", "deployment*", "monitoring*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

